objects/Residential_Project__c.object
<CustomObject>
    <fields>
        <fullName>AHJ_NH__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs
The AHJ field for New Home projects, pulls data from the community AHJ field</description>
        <formula>Community__r.AHJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community AHJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHJ_Specific_Equipment__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This text field is manually populated by the operations team to communicate whether AHJ specific equipment such as an AC disconnect or specific meter is required during installation.</description>
        <label>AHJ Specific Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHJ__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
Text field manually populated by system user
This field allows the operations team to document and share what agency is the authority having jurisdiction  (AHJ) over the area where the project is located. AHJs are typically a county or municipal regulating agency that issues construction permits and conducts post-construction acceptance inspections.</description>
        <label>AHJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
Look up to Account
Link to homeowner&apos;s account record</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Residential Projects (Account)</relationshipLabel>
        <relationshipName>Residential_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Time_Hours__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Actual Time (Hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddersValue__c</fullName>
        <description>Used to capture the dollar amount for adders, and used to pay the Installer for the additional work.</description>
        <label>Adders $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdditionalBuilderServicesWO__c</fullName>
        <description>Used to capture the work order that corresponds to additional work requested by the new homes builder</description>
        <label>Additional Builder Services WO#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalBuilderServicesWoValue__c</fullName>
        <description>Used to capture the value for additional requested work by the Builder, and used to bill the Builder for this amount.</description>
        <label>Additional Builder Services WO $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AddtlBuilderServicesWODateofReceipt__c</fullName>
        <description>Used to capture the date of receipt for the additional charges WO from the Builder</description>
        <label>Addl.Builder Services WO Date of Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Storage_System_Details__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This is a text entry field populated manually by ECs
This filed allows an EC to provide product specifications for battery storage systems sold to homeowners.
Once we enable battery storage sales in the proposal tool, this field will replaced by battery system equipment specification formula fields auto populated from the quote record.</description>
        <label>Battery Storage System Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Battery_Storage__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
Battery storage field is manually populated as a text entry field by a system user (typically and EC)
This field allos the sales person to inform the operations team as to whether or not there is a battery storage system to install at the homeowner&apos;s site.
Future changes: this description was written on 5/10/2016 - In the near future, Battery Storage fields will populated as formula fields drawn from the quote record.</description>
        <label>Battery Storage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Builder_HERS_Rater__c</fullName>
        <formula>Community__r.Builder_HERS_Rater__c</formula>
        <label>Builder HERS Rater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder_Name__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <formula>Community__r.Builder__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Builder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder_WO_Date_of_Receipt__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Builder WO Date of Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Builder_WO_Value__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Builder WO $ Value</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Builder_WO__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Builder WO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Type__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <formula>TEXT(Community__r.Building_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_solar_breaker_be_installed_in_MSP__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting completing a system installation at a homeowner&apos;s site.</description>
        <label>Can solar breaker be installed in MSP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Justification__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This is a pick list field manually populated by any system user cancelling a project. This field is mandatory when a project&apos;s status to cancelled.
The pick list values represent the standard, allowable business justifications for cancelling a project.</description>
        <label>Cancellation Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Situation Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpermitted Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled within 7 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Sale Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Changed Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Service Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Personal Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Install - 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Service Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to External IP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date_NH__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is a formula field populated from the homeowner opportunity record.
It lets users know when the sales process was completed and thus when the installation project phase began.</description>
        <formula>Opportunity__r.Closed_Won_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community</label>
        <referenceTo>NH_Community__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultation_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Consultation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumption_Monitoring_Compatible__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This field is manually populated by an EC or Site Surveyor to communicate site specific details that the installation team needs to know in preparation for starting and completing a system installation at a homeowner&apos;s site.
Specifically, it let&apos;s the operations team know what monitoring hardware can and cannot be installed given the condition of the MSP.</description>
        <label>Consumption Monitoring Compatible</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>IF( ISBLANK(Quote__r.Original_Lease_Number__c) , Quote__r.Final_Lease_Number__c , Quote__r.Original_Lease_Number__c )</formula>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rate_Plan__c</fullName>
        <description>Residential Installation Project Mgmt
Populated programmatically based on Quote. Rate Description from Electric Rate List based on Rate Code from Electric Rate Usage Input</description>
        <label>Current Rate Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_City__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the homeowner&apos;s opportunity record.
It communicates the project site address to the operations team.</description>
        <formula>IF(RecordType.Name == &apos;New Home&apos;, Community__r.City_Location__c, Account__r.BillingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Country__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the homeowner&apos;s opportunity record.
It communicates the project site address to the operations team.</description>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_State__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the homeowner&apos;s opportunity record.
It communicates the project site address to the operations team.</description>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_State_formula__c</fullName>
        <formula>Community__r.State__c</formula>
        <label>Customer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_State_text__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Customer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Street__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the homeowner&apos;s opportunity record.
It communicates the project site address to the operations team.</description>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Street_text__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Customer Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Zip__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the homeowner&apos;s opportunity record.
It communicates the project site address to the operations team.</description>
        <formula>if(RecordType.Name == &apos;New Home&apos;, Community__r.Zip_Code__c , Account__r.BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Zip_text__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Customer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Type__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs
Distribution Type pulled from Community</description>
        <formula>TEXT(Community__r.Distribution_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_Charger_Available__c</fullName>
        <label>EV Charger Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escrow_Date__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs
Escrow Date set manually</description>
        <label>Escrow Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Pass__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
This is a formula field that reads true if the related Opportunity has a campaign of &apos;SunPower VIP Executive Pass&apos;</description>
        <formula>IF(Opportunity__r.Campaign_Name__c = &apos;SunPower VIP Executive Pass&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flat_Roof__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
A TPS NY and NJ Field</description>
        <label>Flat Roof (NY &amp; NJ)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HERS__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>HERS Registry</label>
        <picklist>
            <picklistValues>
                <fullName>CalCERTs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEERS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HOA_Contact_Number__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This text entry field is manually populated by the EC and the operations team with contact information for the homeowner&apos;s HOA.
This is field is mandatory when the HOA field is checked.</description>
        <label>HOA Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HOA_Name__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This is text entry field is manually populated by the EC to provide the operations team with the name of the homeowner&apos;s HOA. 
When the HOA field is marked, this field is mandatory.</description>
        <label>HOA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This check box is manually marked by the EC and communicates to the operations team whether the homeowner lives in a neighborhood governed by a homeowner&apos;s association (HOA).
HOA regulations typically mandate approval from the association before a solar energy system can be installed, so this let&apos;s the operations team know that they need to reach out the HOA to initiate an approval process.</description>
        <label>HOA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hold_Justification__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This pick list field is manually populated when a system user places a project in hold status.
The pick list values represent the standard, allowable business justifications for placing a project hold.
This field is mandatory when a system user attempts to place a project in hold status.</description>
        <label>Hold Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Survey__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
A TPS NJ Field</description>
        <label>Home Survey (NJ Only)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Homeowner_Scheduled_Installation_Date__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This date field is manually populated by the Project Coordinator or Project manager once either role has scheduled a system installation date with a homeowner.
This field provides a central date for operations team members to know when the system installation will commence.</description>
        <label>Homeowner Scheduled Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Homeowner_Utility_Account_No__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This text entry field is manually populated by the EC.
Filed documents the homeowner utility account number for use in interconnection processes.</description>
        <label>Homeowner Utility Account No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeowner_Utility_Meter_No__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This text entry field is manually populated by the EC.
Filed documents the homeowner utility meter number for use in interconnection processes.</description>
        <label>Homeowner Utility Meter No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Price__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Inspection Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Residential Installation Project Mgmt
Relates an installation model to a project. Populated programmatically or manually</description>
        <label>Installation Model</label>
        <referenceTo>Installation_Model__c</referenceTo>
        <relationshipLabel>Residential Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated manually or programmatically based on zip code rules.</description>
        <label>Installation Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Residential Projects (Installation Partner)</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This pick list field is manually populated by the EC and communicates to the operations team the type of installation the particular project is, e.g. a ground mount install, or a roof top install and what type of roof top install.</description>
        <label>Installation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Comp Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Concrete Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S Concrete Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W Concrete Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat - Rolled Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat - Foam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_partner_text__c</fullName>
        <formula>Installation_Partner__r.Name</formula>
        <label>Installation partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup is used to link the project to a inverter so that PO Lines can be created accurately</description>
        <label>Inverter Configuration</label>
        <referenceTo>Inverter_Configuration__c</referenceTo>
        <relationshipLabel>Residential Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Model__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Inverter Model #</label>
        <picklist>
            <picklistValues>
                <fullName>GT5.0-NA-DS-240/208 (240V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GT3.3-NA-DS-240-POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GT2.5-NA-DS-240-P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-2800x (240V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300X (240V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000X (240V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000X (240V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000X (208V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-7000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8000M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB3000US-12 (240V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB4000US-12 (240V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB5000US-12 (240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB6000US-12 (240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB3000TL-US-22 (240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB3800TL-US-22 (240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB5000TL-US-22 (240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6500f-208</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-8000f-208</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000f-208</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300f-240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000f-240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6500f-240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000f-240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300f-277</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000f-277</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Quantity__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Inverter Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverters__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the quote record at the time of project record creation.
This field communicates critical details about the system equipment being installed for the project.</description>
        <formula>&apos;Model: &apos;&amp;Quote__r.Inverter_Model__c &amp;&apos; Quantity: &apos;&amp;TEXT(Quote__r.Inverter_Quantity__c) &amp; BR() &amp;
IF(Quote__r.Inverter_Model_2__c != NULL, &apos;Model: &apos;&amp;Quote__r.Inverter_Model_2__c &amp;&apos; Quantity: &apos;&amp; TEXT(Quote__r.Inverter_Quantity_2__c) &amp; BR(),&apos;&apos;)&amp;
IF(Quote__r.Inverter_Model_3__c != NULL, &apos;Model: &apos;&amp;Quote__r.Inverter_Model_3__c &amp;&apos; Quantity: &apos;&amp; TEXT(Quote__r.Inverter_Quantity_3__c) &amp; BR(), &apos;&apos;)&amp;
IF(Quote__r.Inverter_Model_4__c != NULL,&apos;Model: &apos;&amp;Quote__r.Inverter_Model_4__c &amp;&apos; Quantity: &apos;&amp; TEXT(Quote__r.Inverter_Quantity_4__c) &amp; BR(), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Step__c</fullName>
        <description>The &apos;Order&apos; of the last completed project task</description>
        <label>Last Completed Step</label>
        <summarizedField>Project_Task__c.Order__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Task__c.Status_Type__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Project_Task__c.Critical_Path__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Task__c.Residential_Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Length_of_Project__c</fullName>
        <formula>Project_Task_Max_End_Date__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>